2012-01-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m (-GSShowGlyphsWithAdvances:):
	Update the current point after drawing text. Should not affect
	anything in gui right now, but will be useful later.

2011-12-24  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoContext.m (-beginPrologueBBox:...):
	Add a hack to get landscape printing working. Comment in the source
	reproduced here:
	FIXME: This is confusing... When an 8.5x11 page is set to
	landscape, NSPrintInfo also swaps the paperSize to be 11x8.5,
        but gui also adds a 90 degree rotation as if it will
        be drawing on a 8.5x11 page. So, swap 11x8.5 back to 8.5x11 here.

2011-12-23  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoContext.m (-beginPrologueBBox:...): Use
	paper size from print info to set the cairo page size, instead
	of using the bounding box (which is usually smaller than the
	paper size, and was causing cairo print output to be wrong
	compared to GNUstep's built-in PostScript writer.)

2011-11-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (initialize_keyboard): Don't use
	XK_ISO_Level3_Shift as second alternate key.
	* Documentation/Back/DefaultsSummary.gsdoc: Document this mapping.

2011-11-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGGLFormat.m (-assembleGLXAttributes:): Use
	GLX_BUFFER_SIZE for NSOpenGLPFAColorSize instead of setting all
	the single colour sizes, which was wrong.

2011-11-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (initialize_keyboard): Use
	XK_ISO_Level3_Shift as second alternate key.
	* Documentation/Back/DefaultsSummary.gsdoc: Document this mapping.

2011-11-04  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/context.c: check for NULL from XRenderFindVisualFormat

2011-10-25  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/gsc/GSStreamContext.m:
	* Source/gsc/GSContext.m:
	* Source/gsc/GSGState.m: